--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-330.3KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-683.4KB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-478.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-2.80MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-7.22MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
-  - {name: 🇹🇷 土耳其-442.1KB/s(Youtube:不良林), server: tk-nf-route.teacher2060.com, port: 31256, type: vmess, uuid: B8AAA6E1-F0B3-B9EC-3DFC-BB226C167B33, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 5.183.32.187, port: 22610, type: vmess, uuid: 46a2f46a-c56f-487b-b2c9-b4204bf8021e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.74MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11262, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
+  - {name: 🇨🇳 中国-4.99MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44608, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: shcu.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.86MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.52MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇯🇵 日本-5.00MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.46MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.56MB/s(Youtube:不良林), server: 129.226.216.121, port: 49381, type: vmess, uuid: 2f6d0f82-80c4-42ed-fd46-c76e7cc81de0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.68MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2, server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-7.87MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-330.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.22MB/s(Youtube:不良林)
-      - 🇹🇷 土耳其-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-330.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.22MB/s(Youtube:不良林)
-      - 🇹🇷 土耳其-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-330.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.22MB/s(Youtube:不良林)
-      - 🇹🇷 土耳其-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-330.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.22MB/s(Youtube:不良林)
-      - 🇹🇷 土耳其-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-330.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.22MB/s(Youtube:不良林)
-      - 🇹🇷 土耳其-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-330.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.22MB/s(Youtube:不良林)
-      - 🇹🇷 土耳其-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-330.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.22MB/s(Youtube:不良林)
-      - 🇹🇷 土耳其-442.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
