--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-10.74MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11262, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
-  - {name: 🇨🇳 中国-4.99MB/s(Youtube:不良林), server: shcu.alinkrelay.com, port: 44608, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: shcu.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.86MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.52MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-5.00MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.56MB/s(Youtube:不良林), server: 129.226.216.121, port: 49381, type: vmess, uuid: 2f6d0f82-80c4-42ed-fd46-c76e7cc81de0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.68MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2, server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-7.87MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.05MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.23MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.53MB/s(Youtube:不良林), server: kirakirasevennine.com, port: 443, type: vmess, uuid: 67068812-0f6c-437e-ab13-f480f23bf004, alterId: 13, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /9f21/, ws-headers: {Host: kirakirasevennine.com}}
+  - {name: 🇺🇸 美国-567.2KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-447.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.99MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.86MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.00MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-7.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
