--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-4.05MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.23MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.53MB/s(Youtube:不良林), server: kirakirasevennine.com, port: 443, type: vmess, uuid: 67068812-0f6c-437e-ab13-f480f23bf004, alterId: 13, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /9f21/, ws-headers: {Host: kirakirasevennine.com}}
-  - {name: 🇺🇸 美国-567.2KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-447.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.73MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.37MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 554ba845-2610-4aee-86fc-d2080ff1c4a6, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.04MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-3.06MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-304.5KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-686.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林), server: 213.183.53.222, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.51MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-447.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
