--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.37MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 554ba845-2610-4aee-86fc-d2080ff1c4a6, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.55MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.04MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-3.06MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-304.5KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-686.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林), server: 213.183.53.222, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇨🇳 中国-4.03MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.51MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇷🇺 俄罗斯联邦-220.8KB/s(Youtube:不良林), server: 213.183.53.222, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇧🇷 巴西-2.68MB/s(Youtube:不良林), server: 83.150.217.62, port: 44612, type: trojan, password: 1529baee-f263-48a4-b95b-ac0a49814268, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.07MB/s(Youtube:不良林), server: 5.183.32.187, port: 22610, type: vmess, uuid: 46a2f46a-c56f-487b-b2c9-b4204bf8021e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: v6d1.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v6d1.moonfree.top}}
+  - {name: 🇨🇳 中国-1.86MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-4.88MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.62MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.37MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-220.8KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-220.8KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-220.8KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-220.8KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-220.8KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-220.8KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.06MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-304.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-686.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-302.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-220.8KB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
